[package]
name = "luno"
version = "0.3.0"
description = "An unofficial Rust wrapper for the Luno API."
authors = ["Duncan Dean <duncangleeddean@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://duncandean.github.io/luno-rust"
homepage = "https://github.com/duncandean/luno-rust"
repository = "https://github.com/duncandean/luno-rust"
readme = "README.md"
keywords = ["luno", "bitx"]

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
rust_decimal = "1.8"
rust_decimal_macros = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.20"
strum_macros = "0.20"

[dev-dependencies]
mockito = "0.28"
tokio = { version = "0.3", features = ["macros"] }
